Bug 117549 - In gtk3, crash when trying to revert back to Standard Toolbar from any Notebookbar variant
Summary: In gtk3, crash when trying to revert back to Standard Toolbar from any Notebo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0
Keywords: bibisectRequest, haveBacktrace, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-05-10 14:20 UTC by Gökhan Gurbetoğlu
Modified: 2018-05-11 14:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of the Notebookbar to Standard Toolbar switching crash in gtk3 (4.21 KB, application/gzip)
2018-05-10 14:34 UTC, Gökhan Gurbetoğlu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gökhan Gurbetoğlu 2018-05-10 14:20:17 UTC
Description:
Returning back to Standard Toolbar from any of the Notebookbar views using the View->User Interface menu causes a crash in gtk3. Tested on kde and it works fine.
Problem only appears when going from one of the Notebookbar styles below the separator listed in the menu to the ones on top of the separator and not the other way around.

Steps to Reproduce:
1. Open LibreOffice in gtk3.
2. Enable experimental features from Tools -> Options -> LibreOffice -> Advanced. LibreOffice will restart for changes to take effect.
3. From the View -> User Interface menu, choose one of the Notebookbar styles, these are the ones below the separator.
4. Revert back to one of the standard user interfaces by going to View -> User Interface menu and choosing one of the styles above the separator.
5. LibreOffice crashes.

Actual Results:  
LibreOffice crashes.

Expected Results:
User interface should switch to the selected option from the menu.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha1+
Build ID: 1e2afc9bd3062cfba6b65b45c17a08f298014239
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: en-US (en_US.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.139 Safari/537.36
Comment 1 Gökhan Gurbetoğlu 2018-05-10 14:34:14 UTC
Created attachment 142017 [details]
Backtrace of the Notebookbar to Standard Toolbar switching crash in gtk3
Comment 2 Buovjaga 2018-05-10 14:37:09 UTC
Repro.

In the past, the NB variants were disabled before you selected "Notebookbar". Maybe the crash manifests due to this new UI behaviour.

Arch Linux 64-bit
Version: 6.1.0.0.alpha1+
Build ID: 014d31ca48e5ec443e8c7e70edc815f51746c71f
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 10th 2018
Comment 3 Julien Nabet 2018-05-10 18:58:06 UTC
On pc Debian x86-64 with master sources updated today (48078ed27c6a50c270f3a2af75d61c37dd8b6c1c) + gtk3, I don't reproduce this.
Could you give the specific views chosen?
Comment 4 Buovjaga 2018-05-10 19:37:33 UTC
(In reply to Julien Nabet from comment #3)
> On pc Debian x86-64 with master sources updated today
> (48078ed27c6a50c270f3a2af75d61c37dd8b6c1c) + gtk3, I don't reproduce this.
> Could you give the specific views chosen?

Try tabbed variant and then back to normal toolbar.
Comment 5 Julien Nabet 2018-05-10 19:59:09 UTC
(In reply to Buovjaga from comment #4)
> (In reply to Julien Nabet from comment #3)
> > On pc Debian x86-64 with master sources updated today
> > (48078ed27c6a50c270f3a2af75d61c37dd8b6c1c) + gtk3, I don't reproduce this.
> > Could you give the specific views chosen?
> 
> Try tabbed variant and then back to normal toolbar.

Sorry, I don't reproduce this :-(
Comment 6 Caolán McNamara 2018-05-11 08:32:34 UTC
I can't reproduce it, but based on the backtrace I expect https://gerrit.libreoffice.org/#/c/54122/ will fix it. I don't think this is really gtk3 specific, just maybe different timing of focus ordering.
Comment 7 Buovjaga 2018-05-11 09:41:06 UTC
(In reply to Caolán McNamara from comment #6)
> I can't reproduce it, but based on the backtrace I expect
> https://gerrit.libreoffice.org/#/c/54122/ will fix it. I don't think this is
> really gtk3 specific, just maybe different timing of focus ordering.

This seems to fix it!

Arch Linux 64-bit
Version: 6.1.0.0.alpha1+
Build ID: 21b11273ae91f0cf7fd5f3f9fd2168e4349852c4
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 11th 2018
Comment 8 Commit Notification 2018-05-11 14:26:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3aa01898e58c4a3bea64fea33778ac455f1f5253

tdf#117549 crash with focus setting during disposing

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.