tdf#117549 crash with focus setting during disposing

Change-Id: I1ab492a4c6fab89debac90224a5f78102d33d664
Reviewed-on: https://gerrit.libreoffice.org/54122
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>